# autocorp-agents

./: .env.example  .gitignore  README.md  main.py  requirements.txt
api_server/: README.md  __init__.py  main.py  requirements.txt
autocorp_agents/: LICENSE  README.md  __init__.py  pyproject.toml
autocorp_paypal_cli/: README.md  __init__.py  __main__.py
company/: runbook.md
company/config/: content-ledger.yaml  decision-gates.yaml  employees.yaml  health-thresholds.yaml  kpi_records.yaml  ledger.yaml  meeting.yaml  payees.yaml  role_kpi.yaml  secrets.yaml  task_queue.yaml  wallet_balance_state.yaml  wallets.yaml
company/daily-reports/: 2026-06-29-evening.md  2026-06-29-morning.md  2026-06-30-morning.md  2026-07-01-morning.md
company/dashboard/: 2026-06-28.md  2026-06-29.md
company/safety/: incidents.md
engine/: autonomous_loop.py  content_miner.py  daily_ops.py  decision_gate.py  delivery.py  health_monitor.py  human_loop.py  ledger.py  llm_client.py  meeting.py  message_pool.py  orchestrator.py  phase_chain.py  reporter.py  scheduler.py  secrets.py  service_order.py  social_reach.py  sop_loader.py  task_executor.py  task_queue.py  trae_bridge.py  workspace.py
scripts/: fetch_defi_realtime.py  generate_cover_image.py  generate_gumroad_pdf.py  generate_marketing_images.py  md_to_paragraph_html.py  scan_realtime_opportunities.py  screenshot_promo.py  test_api_e2e.py  test_paypal_live.py
tests/: test_base_agent.py  test_compliance.py  test_crypto_outflow.py  test_ledger.py  test_ledger_real.py  test_llm_backend.py  test_paypal.py  test_paypal_subscription.py  test_secrets.py  test_workspace.py
(+284 files in other folders)
